<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.vcarmen.socialtech.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textAlignment="textStart"
            android:text="@string/agenda"
            />
        <TextView
            android:id="@+id/numeroContactos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="2sp"
            android:text="--"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elementos"
            />



    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="4sp"
        android:text=""
        />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textSize="18sp"
        android:hint="@string/nombre"
    />

    <EditText
        android:id="@+id/apellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textSize="18sp"
        android:hint="@string/apellido"
        />

    <EditText
        android:id="@+id/telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:textSize="18sp"
        android:hint="@string/telefono"
        />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        android:hint="@string/email"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:text="@string/formacion"
            />


        <MultiAutoCompleteTextView
            android:id="@+id/Spinnerformacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionHint="@string/formacion"
            android:completionThreshold="1"
            />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        />

    <Button
        android:id="@+id/botonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botoninsertar"
        android:textSize="18sp"
        android:gravity="center"
        />


</LinearLayout>
